# ctxeng

./: .pre-commit-config.yaml  .ruff.toml  README.md  deep-research-report.md  deep-research.md  plan-CtxEng.prompt.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  eval.yml  publish.yml
ctxeng/: __init__.py  app.py  cli.py  models.py  server.py
ctxeng/assembly/: __init__.py  assembler.py  prioritizer.py  templates.py
ctxeng/compression/: __init__.py  consolidator.py  summarizer.py
ctxeng/core/: __init__.py  context_manager.py  memory_store.py  profile.py  safety.py
ctxeng/eval/: __init__.py  __main__.py  benchmark.py  cli.py  datasets.py  judge.py  metrics.py
ctxeng/ingestion/: __init__.py  image.py  ingestor.py  pdf.py  structured.py  text.py
ctxeng/llm/: __init__.py  base.py  chat.py  ollama.py  openai.py
ctxeng/observability/: __init__.py  reporter.py  schema.py  tracer.py
ctxeng/retrieval/: __init__.py  embeddings.py  hybrid.py  reranker.py
ctxeng/routing/: __init__.py  diff.py  lifecycle.py  router.py
ctxeng/static/: chat.html
ctxeng/stores/: __init__.py  base.py  memory.py  sqlite.py  tiered.py  vector.py
ctxeng/tools/: __init__.py  base.py  calculator.py  file_lookup.py  web_search.py
tests/: test_assembly.py  test_compression.py  test_context_manager.py  test_eval.py  test_ingestion.py  test_llm.py  test_observability.py  test_profile.py  test_retrieval.py  test_routing.py  test_safety.py  test_server.py  test_stores.py  test_tools.py
