[project]
name = "ctxeng"
version = "0.1.0"
description = "A lightweight context engineering MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["httpx>=0.28"]

[tool.pytest.ini_options]
testpaths = ["tests"]
