[project]
name = "ctxeng"
version = "0.1.0"
description = "A lightweight context engineering MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
templates = ["jinja2>=3.1"]
llm = ["openai>=1.0"]
retrieval = ["rank-bm25>=0.2"]
vector = [
    "sentence-transformers>=3.0",
    "numpy>=1.24",
    "torch>=2.0",
]
ingestion = [
    "pillow>=10.0",
    "transformers>=4.40",
    "python-magic>=0.4",
]
pdf = [
    "pypdf2>=3.0",
]
all = [
    "ctxeng[templates, retrieval, vector, llm, ingestion, pdf]",
]
test = ["httpx>=0.28"]

[tool.pytest.ini_options]
testpaths = ["tests"]
